# lilSoftRend

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  justfile
examples/: ex01.cpp
include/: callbacks.hpp  enums.hpp  input.hpp  lilSoftRend.hpp  types.hpp  windowing.hpp
include/types/: colour.hpp  framebuffer.hpp  vector.hpp
src/: input.cpp  lilSoftRend.cpp  windowing.cpp
src/core/: windowing.cpp
